@@ -263,6 +263,22 @@ def recent_syslog(pattern):
             lines += line
     return lines
 
+def xsession_errors(pattern):
+    '''Extract messages from ~/.xsession-errors which match a regex.
+        
+    pattern should be a "re" object.
+    '''
+
+    path = os.path.expanduser('~/.xsession-errors')
+    if not os.path.exists(path):
+        return None
+
+    lines = ''
+    for line in open(path):
+        if pattern.search(line):
+            lines += line
+    return lines
+
 PCI_MASS_STORAGE = 0x01
 PCI_NETWORK = 0x02
 PCI_DISPLAY = 0x03
@@ -436,6 +452,39 @@ def package_versions(*packages):
             versions += '%s %s\n' % (package, version)
 
     return versions
+
+def shared_libraries(path):
+    '''Returns a list of strings containing the sonames of shared libraries
+    with which the specified binary is linked.'''
+
+    libs = set()
+
+    for line in command_output(['ldd', path]).split('\n'):
+        try:
+            lib, rest = line.split('=>', 1)
+        except ValueError:
+            continue
+
+        lib = lib.strip()
+        libs.add(lib)
+
+    return libs
+
+def links_with_shared_library(path, lib):
+    '''Returns True if the binary at path links with the library named lib.
+
+    path should be a fully qualified path (e.g. report['ExecutablePath'])
+    lib may be of the form 'lib<name>' or 'lib<name>.so.<version>'
+    '''
+
+    libs = shared_libraries(path)
+
+    if lib in libs: return True
+
+    for linked_lib in libs:
+        if linked_lib.startswith(lib + '.so.'): return True
+
+    return False
 
 def _get_module_license(module):
     '''Return the license for a given kernel module.'''
